--- a/app.css
+++ b/app.css
@@ -1,7 +1,7 @@
 /* Barba overlay blue */
-.loader {
+/* .loader {
     visibility: hidden;
-} 
+}  */
 
 /* KILL WEBFLOW BADGE */
 .w-webflow-badge {
