--- a/app.css
+++ b/app.css
@@ -36,10 +36,10 @@
     } 
     /*animate all*/
     *{
-        -webkit-transition:all 1s ease;
-             -moz-transition:all 1s ease;
-                   -o-transition:all 1s ease;
-                         transition:all 1s ease;
+        -webkit-transition:all  ease;
+             -moz-transition:all  ease;
+                   -o-transition:all  ease;
+                         transition:all  ease;
     }
 
 
