--- a/app.css
+++ b/app.css
@@ -34,13 +34,13 @@
     font-size:24px
     }
     } 
-    /*animate all*/
+    /*animate all
     *{
         -webkit-transition:all 1s ease;
              -moz-transition:all 1s ease;
                    -o-transition:all 1s ease;
                          transition:all 1s ease;
-    }
+    }*/
 
 
 /* Barba overlay blue */
