--- a/app.css
+++ b/app.css
@@ -64,3 +64,22 @@
     position: relative !important;
     right: 1000px !important;
 }
+
+
+/* PROJECTS IMAGE CURSOR */
+.cursor {
+    position: absolute;
+    width: 600px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -100px;
+    background: no-repeat 50% 50%;
+    background-size: cover;
+    z-index: 1;
+}
+  
+  .project {
+   mix-blend-mode: difference;
+}
+  
