--- a/app.css
+++ b/app.css
@@ -69,8 +69,8 @@
 /* PROJECTS IMAGE CURSOR */
 .cursor {
     position: absolute;
-    width: 600px;
-    height: 400px;
+    width: 250px;
+    height: 200px;
     top: 50%;
     left: 50%;
     margin: -100px 0 0 -100px;
@@ -78,7 +78,26 @@
     background-size: cover;
     z-index: 1;
 }
-  
+
+/* PROJECTS IMAGE CURSOR -- smallerscreen
+@media (max-width: 900px){
+    .cursor {
+    position: absolute;
+    width: 250px;
+    height: 200px;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -100px;
+    background: no-repeat 50% 50%;
+    background-size: cover;
+    z-index: 1;
+  } */
+    .project {
+      padding: 0px;
+    }
+  }
+
+
   .project {
    mix-blend-mode: difference;
 }
