--- a/app.css
+++ b/app.css
@@ -68,11 +68,11 @@
 
 /* PROJECTS IMAGE CURSOR */
 .cursor {
-    position: absolute; 
+   /* position: absolute;*/ 
     width: 350px;
     height: 200px;
-    top: 0%;
-    left: 0%;
+    /*top: 0%;
+    left: 0%;*/
     margin: -100px 0 0 -100px;
     background: no-repeat 50% 50%;
     background-size: cover;
