--- a/app.css
+++ b/app.css
@@ -71,9 +71,9 @@
    /* position: absolute;*/ 
     width: 350px;
     height: 200px;
-    /*top: 0%;
-    left: 0%;*/
-    margin: -100px 0 0 -100px;
+    /*top: 1%;
+    left: 1%;*/
+    /*margin: -100px 0 0 -100px;*/
     background: no-repeat 50% 50%;
     background-size: cover;
     z-index: 1;
